# lua55-on-51

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  PLAN.md  PLAN_LUA55.md  README.md
.github/workflows/: build_compat55.yml
compat/: lua51_compat.cpp  lua51_compat.h  lua55_compat.cpp  luau_bridge.cpp
compat/include/: lauxlib.h  lua.h  lualib.h
compat_tests/: main.c
compat_tests/lua_tests/json.lua/: json.luac
compat_tests/lua_tests/json.lua/bench/: bench_all.luac  bench_encode.luac  dkjson.luac  jfjson.luac  json4lua.luac
compat_tests/lua_tests/json.lua/bench/util/: bench.luac
compat_tests/lua_tests/json.lua/test/: test.luac
compat_tests/lua_tests/lume/: test.luac
compat_tests/lua_utf8/: lutf8lib.c  test.lua  test_compat.lua  test_pm.lua
compat_tests/shims/: debug_getinfo.lua  debug_getinfo.luac  json_loadfile.luac
example/: main.c
example/shims/: json_loadfile.lua
example/tests/: json.luac
example/tests/json.lua/bench/: bench_decode.lua  bench_decode.luac  bench_encode.lua
example/tests/lume/: lume.luac
example/tests/lume/test/: test.lua  test.luac
example/tests/lume/util/: tester.luac
lua51/: LICENSE  NOTICE
lua55/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcorolib.c  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltests.c  ltests.h  ltm.c  (+12 more)
lua55/manual/: manual.of
lua55/testes/libs/: lib1.c  lib11.c  lib2.c  lib21.c  lib22.c
patches/: apply_luau_patches.sh  luau_type_reorder.patch
